src/objects/Treatment_CRF_Report_Table_4__c.object
<CustomObject>
    <fields>
        <fullName>Blood_Early_Tx_Submitted__c</fullName>
        <label>Blood Early Tx Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blood_Inter_Reg_Submitted__c</fullName>
        <label>Blood Inter Reg Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blood_Pre_Surg_Submitted__c</fullName>
        <label>Blood Pre Surg Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Report Request</label>
        <referenceTo>Report_Request__c</referenceTo>
        <relationshipLabel>Treatment CRF Report Table 4</relationshipLabel>
        <relationshipName>Treatment_CRF_Report_Table_4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trial_Site_Name__c</fullName>
        <label>Trial Site Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Treatment CRF Report Table 4</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Treatment CRF Report Table 4</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>